[metadata]
name = python-ironic-inspector-client
summary = Python client for Ironic Inspector
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-ironic-inspector-client/latest/
license = Apache-2
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
[files]
packages =
    ironic_inspector_client
[entry_points]
openstack.cli.extension =
    baremetal-introspection = ironic_inspector_client.shell
openstack.baremetal_introspection.v1 =
    baremetal_introspection_start = ironic_inspector_client.shell:StartCommand
    baremetal_introspection_status = ironic_inspector_client.shell:StatusCommand
    baremetal_introspection_list = ironic_inspector_client.shell:StatusListCommand
    baremetal_introspection_reprocess = ironic_inspector_client.shell:ReprocessCommand
    baremetal_introspection_abort = ironic_inspector_client.shell:AbortCommand
    baremetal_introspection_data_save = ironic_inspector_client.shell:DataSaveCommand
    baremetal_introspection_rule_import = ironic_inspector_client.shell:RuleImportCommand
    baremetal_introspection_rule_list = ironic_inspector_client.shell:RuleListCommand
    baremetal_introspection_rule_show = ironic_inspector_client.shell:RuleShowCommand
    baremetal_introspection_rule_delete = ironic_inspector_client.shell:RuleDeleteCommand
    baremetal_introspection_rule_purge = ironic_inspector_client.shell:RulePurgeCommand
    baremetal_introspection_interface_list = ironic_inspector_client.shell:InterfaceListCommand
    baremetal_introspection_interface_show = ironic_inspector_client.shell:InterfaceShowCommand

[extras]
cli =
  python-openstackclient>=3.12.0 # Apache-2.0
